stoat/src/snapshots/stoat__test_harness__snapshot_review_clean_tree.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 80x14
---






                    [0m[38;2;171;178;191mworking tree clean, watching for changes[0m






[0m[1m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[1m[38;2;250;250;250m[48;2;99;109;131m work [0m[38;2;86;182;194m[48;2;99;109;131m review [0m[38;2;250;250;250m[48;2;99;109;131m[scratch]                                                    [0m
