stoat/src/snapshots/stoat__test_harness__snapshot_rust_doc_comment_markdown.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_file
focused: #1 of 1
mode: normal
size: 40x6
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[3m[38;2;99;109;131m[48;2;40;44;52m/// A [0m[1m[3m[38;2;99;109;131m[48;2;40;44;52m**bold**[0m[3m[38;2;99;109;131m[48;2;40;44;52m word and a [0m[38;2;250;250;250m[48;2;40;44;52m          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[3m[38;2;133;193;255m[48;2;40;44;52m[link][0m[3m[4m[38;2;97;175;239m[48;2;40;44;52m(url)[0m[3m[38;2;99;109;131m[48;2;40;44;52m.[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;97;175;239m[48;2;40;44;52mfn[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;229;192;123m[48;2;40;44;52ma[0m[38;2;171;178;191m[48;2;40;44;52m()[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;171;178;191m[48;2;40;44;52m{}[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) /test/doc.rs [0m[38;2;99;109;131m[48;2;99;109;131m──────[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
